compiler/kernc_cli/tests/soundness/run-pass/pattern/user_pattern_alternative_same_bind_shape.rn
// class: pattern-protocol
// exit: 0

struct Low {};
struct High {};

impl Low : Pattern[i32] {
    type Bind = struct { value: i32 };

    fn apply(value: i32) ?Bind {
        if (value < 10) {
            return .{ Some: .{ value: value } };
        }
        return .None;
    }
}

impl High : Pattern[i32] {
    type Bind = struct { value: i32 };

    fn apply(value: i32) ?Bind {
        if (value >= 10) {
            return .{ Some: .{ value: value } };
        }
        return .None;
    }
}

fn main() i32 {
    let low = Low.{};
    let high = High.{};
    return match (12) {
        low, high => value - 12,
        _ => 1,
    };
}
